Fix height issue in lightbox on safari mobile

--- a/src/javascript/app/components/Layout/index.scss
+++ b/src/javascript/app/components/Layout/index.scss
@@ -4,7 +4,7 @@
   padding: 120px var(--layout-padding-side) 20px;
   position: relative;
   z-index: $z-index-content;
-  min-height: 100vh;
+  min-height: 100dvh;
 
   --1x-columns: 6;
   --2x-columns: 3;
